--- a/portfolio.html
+++ b/portfolio.html
@@ -73,63 +73,115 @@
           </ul>
           <!-- Проекты -->
           <h2 class="heading-visible">Проекты</h2>
-          <ul>
-            <li>
-              <img src="./images/img_pf_1.jpg" alt="Технокряк" width="370" height="294" />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
+          <ul class="portfolio">
+            <li class="portfolio-card">
+              <a href="">
+                <div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_1.jpg" alt="Технокряк" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Технокряк</h3>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_2.jpg" alt="Постер NO vs GS" width="370" height="294" />
-              <h3 class="portfolio-title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h3>
-              <p class="portfolio-text">Дизайн</p>
+
+            <li class="portfolio-card">
+              <a href="">
+                <div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_2.jpg" alt="Постер NO vs GS" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h3>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_3.jpg" alt="Ресторан Seafood" width="370" height="294" />
-              <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-              <p class="portfolio-text">Приложение</p>
+
+            <li class="portfolio-card">
+              <a href="">
+                <div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_3.jpg" alt="Ресторан Seafood" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_4.jpg" alt="Проект Prime" width="370" height="294" />
-              <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-              <p class="portfolio-text">Маркетинг</p>
+
+            <li class="portfolio-card">
+              <a href=""
+                ><div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_4.jpg" alt="Проект Prime" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_5.jpg" alt="Проект Boxes" width="370" height="294" />
-              <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-              <p class="portfolio-text">Приложение</p>
+
+            <li class="portfolio-card">
+              <a href="">
+                <div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_5.jpg" alt="Проект Boxes" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/img_pf_6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
-              <p class="portfolio-text">Веб-сайт</p>
+
+            <li class="portfolio-card">
+              <a href=""
+                ><div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_6.jpg" alt="Inspiration has no Borders" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/img_pf_7.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
-              <p class="portfolio-text">Дизайн</p>
+
+            <li class="portfolio-card">
+              <a href="">
+                <div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_7.jpg" alt="Издание Limited Edition" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_8.jpg" alt="Проект LAB" width="370" height="294" />
-              <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
-              <p class="portfolio-text">Маркетинг</p>
+
+            <li class="portfolio-card">
+              <a href=""
+                ><div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_8.jpg" alt="Проект LAB" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li>
-              <img src="./images/img_pf_9.jpg" alt="Growing Business" width="370" height="294" />
-              <h3 lang="en" class="portfolio-title">Growing Business</h3>
-              <p class="portfolio-text">Приложение</p>
+
+            <li class="portfolio-card">
+              <a href=""
+                ><div class="portfolio-card-thumb">
+                  <img src="./images/img_pf_9.jpg" alt="Growing Business" />
+                </div>
+                <div class="portfolio-card-content">
+                  <h3 lang="en" class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </section>
