--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
         <section>
           <h2 class="heading-visible">Особенности</h2>
           <ul class="specificities">
-            <li class="item">
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Внимание к деталям</h3>
               <p class="section-specificities-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Пунктуальность</h3>
               <p class="section-specificities-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Планирование</h3>
               <p class="section-specificities-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Современные технологии</h3>
               <p class="section-specificities-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -93,13 +93,13 @@
         <section class="section">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="works">
-            <li class="item">
+            <li class="works-card">
               <img src="./images/img_1.jpg" alt="Разработка" />
             </li>
-            <li class="item">
+            <li class="works-card">
               <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" />
             </li>
-            <li class="item">
+            <li class="works-card">
               <img src="./images/img_3.jpg" alt="Оформление дизайнов" />
             </li>
           </ul>
@@ -109,27 +109,35 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team">
             <li class="team-card">
-              <img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" />
-              <h3 class="team-title">Игорь Демьяненко</h3>
-              <p lang="en" class="team-text">Product Designer</p>
+              <div><img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" /></div>
+              <div>
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-card">
-              <img src="./images/photo_2.jpg" alt="Фото Ольга Репина" />
-              <h3 class="team-title">Ольга Репина</h3>
-              <p lang="en" class="team-text">Frontend Develoder</p>
+              <div><img src="./images/photo_2.jpg" alt="Фото Ольга Репина" /></div>
+              <div>
+                <h3 class="team-title">Ольга Репина</h3>
+                <p lang="en" class="team-text">Frontend Develoder</p>
+              </div>
             </li>
 
             <li class="team-card">
-              <img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" />
-              <h3 class="team-title">Николай Тарасов</h3>
-              <p lang="en" class="team-text">Marketing</p>
+              <div><img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" /></div>
+              <div>
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p lang="en" class="team-text">Marketing</p>
+              </div>
             </li>
 
             <li class="team-card">
-              <img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" />
-              <h3 class="team-title">Михаил Ермаков</h3>
-              <p lang="en" class="team-text">UI Designer</p>
+              <div><img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" /></div>
+              <div>
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </section>
